# mlir-js-parser

./: .gitignore  README.md  package-lock.json  package.json  vitest.config.mjs  vitest.snap.config.mjs
.github/workflows/: ci-build-wasm.yml  ci-stablehlo-scan.yml  ci-tests-node.yml  ci-tests-snapshots.yml
cpp/: CMakeLists.txt
cpp/include/: parser.h
cpp/src/: cli.cc  parser.cc  wasm_entry.c
docs/: ADD-DIALECTS.md  BUILD.md  SIZES.md  STABLEHLO_COVERAGE.md  TEST_GUIDE.md
scripts/: bootstrap-llvm-wasm.sh  build-native.sh  build-stablehlo-wasm.sh  build-wasm.sh  find-llvm.sh  size-report.mjs  stablehlo-scan.mjs
scripts/cmake-overlays/stablehlo-wasm-min/: CMakeLists.txt
tests/: README.md
tests/snapshot/core/: func-block-arg-loc.test.js  module-attributes.test.js
tests/snapshot/core/__snapshots__/: func-block-arg-loc.test.js.snap  module-attributes.test.js.snap
tests/unit/core/: allow-unregistered.test.js  basic-structure.test.js  parse-check-api.test.js  parse-mlir-api.test.js
wasm/: bindings.js
wasm/sample/: dialects-demo.mjs  index.html  node.mjs  run-json.mjs
